# spacescapeII

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: FindALLEGRO5.cmake  FindALLEGRO5_ACODEC.cmake  FindALLEGRO5_AUDIO.cmake  FindALLEGRO5_FONT.cmake  FindALLEGRO5_IMAGE.cmake  FindALLEGRO5_PRIMITIVES.cmake  FindALLEGRO5_TTF.cmake
data/: data.cfg
data/musics/: bfbeyond.xm  breakmix.mod  cortouchka.mod  goatage.xm  hyperdrive.mod  last_chip_standing.it  subgliep.mod
src/: Background.cpp  Background.hpp  Bonus.cpp  Bonus.hpp  Explosion.cpp  Explosion.hpp  LifeBar.cpp  LifeBar.hpp  Main.cpp  Message.hpp  Mother.hpp  Particles.cpp  Particles.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Score.cpp  Score.hpp  ShieldBar.cpp  ShieldBar.hpp  Wave.cpp.q  Wave.hpp.q  Weapon.hpp
src/ennemies/: Beetle.cpp  Beetle.hpp  Behaviors.cpp  Behaviors.hpp  Boss1.cpp  Boss1.hpp  Ennemy.cpp  Ennemy.hpp  Plane.cpp  Plane.hpp  Ship.cpp  Ship.hpp  Ship2.cpp  Ship2.hpp  Turret.cpp  Turret.hpp
src/game/: Explosable.hpp
src/lab/: Engine.cpp  Engine.hpp  Exception.cpp  Exception.hpp  Resources.cpp  Resources.hpp
src/lab/activity/: Activity.cpp  Activity.hpp  Binder.cpp  Binder.hpp  Task.cpp  Task.hpp
src/lab/config/: Configurable.cpp  Configurable.hpp  Configuration.cpp  Configuration.hpp
src/lab/event/: Event.cpp  Event.hpp  Generator.cpp  Generator.hpp  Listener.hpp
src/lab/game/: Behavior.cpp  Behavior.hpp  BehaviorLink.cpp  BehaviorLink.hpp  BehavioredEntity.cpp  BehavioredEntity.hpp  Entity.cpp  Entity.hpp  Rule.hpp  World.cpp  World.hpp
src/lab/graphic/: Animation.cpp  Animation.hpp  Background.hpp  Drawable.cpp  Drawable.hpp  GVector.hpp  Layer.fusioner_a_background.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.cpp.bak  ParticleSystem.hpp  ParticleSystem.hpp.bak  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/lab/gui/: Element.cpp  Element.hpp  Gui.hpp  PrimitiveElement.cpp  PrimitiveElement.hpp
src/lab/io/: AllegroDevice.cpp  AllegroDevice.hpp  Device.cpp  Device.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Sound.cpp  Sound.hpp  Video.cpp  Video.hpp
src/lab/math/: Box.hpp  Matrix.hpp  Polygon.hpp  Segment.hpp  Vector.hpp
src/lab/patterns/: Singleton.hpp
src/lab/physic/: Context.q.hpp  Object.cpp  Object.hpp
src/lab/sound/: Sample.cpp  Sample.hpp  Stream.cpp  Stream.hpp
src/lab/util/: Counter.q.hpp  HeightMap.q.hpp  Tree2d.q.hpp  Value.cpp  Value.hpp
src/solo/: Game.cpp  Game.hpp  Tasks.cpp  Tasks.hpp
(+1 files in other folders)
